# ham-dashboard

./: .gitignore
adif/: Cargo.toml
adif/src/: reader.rs
dashboard/: app.json  metro.config.js  package-lock.json  package.json
dashboard-server/: Cargo.toml  send-qso.py  test.sh
dashboard-server/migrations/2023-10-24-115301_create/: down.sql  up.sql
dashboard-server/src/: adif.rs  contact_data.rs  database.rs  graphql.rs  hamqth.rs  helpers.rs  main.rs  schema.rs  udp.rs  xml.rs
dashboard-server/src/activity/: mod.rs  test.adi
dashboard-server/src/prefix/: area-ok1rr.tbl  mod.rs
dashboard-server/src/rst/: mod.rs  test.rs
dashboard-server/xml-examples/: app-info.xml  contact-delete.xml  contact-info-2.xml  contact-info.xml  radio-info.xml  score.xml
dashboard/app/: +html.tsx  [...missing].tsx  _layout.tsx  modal.tsx
dashboard/app/(tabs)/: _layout.tsx  index.tsx  two.tsx
dashboard/components/: Themed.tsx
