[package]
name = "dashboard-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adif = { path = "../adif" }
anyhow = "1.0.75"
async-graphql = { version = "6.0.9", default-features = false, features = ["playground"] }
async-graphql-axum = "6.0.9"
axum = { version = "0.6.20", features = ["http2", "headers"] }
diesel = { version = "2.1.3", features = ["sqlite", "time", "r2d2"] }
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
quick-xml = { version = "0.30.0", features = ["serde", "serialize"] }
regex = "1.10.2"
reqwest = "0.11.22"
rusqlite = "0.29.0"
serde = { version = "1.0.189", features = ["serde_derive"] }
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["serde", "parsing", "macros", "formatting"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tower-http = { version = "0.4.4", features = ["cors"] }
